# claudes-steward

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  VERIFICATION.md  justfile
.beads/: issues.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.beads/formulas/: onboard.formula.json
.claude/: settings.json  settings.local.json
docs/plans/archived/: 2026-02-12-chunk-splitting-anthropic-aligned.atomized.md
roster/: README.md
shared/: README.md  schema.sql
shared/experiments/: FINDINGS.md  README.md
shared/experiments/logs/: 2026-02-05_163434_A2-allowed-tools.jsonl  2026-02-05_163518_A3-session-resume.jsonl  current.jsonl
shared/experiments/observations/: 2026-02-05_163007_A1-basic-query.md  2026-02-05_163434_A2-allowed-tools.md  2026-02-05_163518_A3-session-resume.md
shared/hooks/: probe.sh  steward-hook.sh
shared/ocaml/: claude-steward.opam  dune-project  justfile  steward_hook.opam
shared/ocaml/lib/: async_embed.ml  bm25.ml  db.ml  discover.ml  dune  embed.ml  finder.ml  indexer.ml  json.ml  qdrant.ml  roster.ml  steward.ml  tmux.ml  transcript.ml  transition.ml  triage.ml  types.ml
shared/ocaml/test/: dune  test_steward.ml
shared/qdrant/: justfile
shared/qdrant/config/: config.yaml
shared/qdrant/storage/: raft_state.json
shared/research/: CHUNK-SPLITTING-ANALYSIS.md  LANGUAGE-CHOICE.md  SESSION-FINDER-FINDINGS.md  TRANSCRIPT-SEARCH-DESIGN.md  transcript-search-tools.md
shared/scripts/: new-experiment.sh
triage/: README.md
(+18 files in other folders)
