(lang dune 3.0)
(name claude-steward)
(generate_opam_files true)

(package
 (name claude-steward)
 (synopsis "Claude Code hook handler for claudes-steward")
 (depends
  (ocaml (>= 5.2.0))
  (dune (>= 3.0))
  yojson
  sqlite3
  lwt
  lwt_ppx
  cohttp-lwt-unix
  uutf
  (alcotest :with-test)
  (alcotest-lwt :with-test)))
